--- a/fancyidle.html
+++ b/fancyidle.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="height:100%;width:100%;">
+<html>
 <head>
     <!-- Material Design Lite -->
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
@@ -7,7 +7,7 @@
     <!-- Material Design icon font -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
-<body style="height:100%;width:100%;overflow:hidden">
+<body style="overflow:hidden">
   <style>*{position:relative !important;transition: all 0.4s ease !important}img{position:absolute !important;opacity:0;transition: all 1s ease !important}
   .tx{opacity:0}.tx2{opacity:0}
   </style>
@@ -16,13 +16,23 @@
   <img  id="i3"src="http://gunvolt.com/en/GV2/special/img/wall_hanami2017_16_9.jpg" style="width:110%;filter:blur(15px);position:static;top:-5%;left:-5%;z-index:-500"></img></div>
   <div><button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" onclick="clickerr()" style="position:relative;left:20px;top:20px">
     <i class="material-icons" style="position:relative;left:12px;top:22px">archive</i>
+  </button><button class="mdl-button--mini-fab mdl-button--fab mdl-js-ripple-effect mdl-button--colored" onclick="mt()" style="position:static;left:-40px;bottom:-40px">
+    <i class="material-icons" style="position:relative;left:12px;top:15px">queue_music</i>
   </button><h4 style="position:relative;top:-55px;left:81px;font-family:Roboto;filter:blur(2px);font-weight:1000">Tanner's False Wallpaper</h4>
   <h4 style="position:relative;top:-112px;left:80px;font-family:Roboto;color:#fff;font-weight:1000">Tanner's False Wallpaper</h4>
   <h4 style="position:relative;top:-148px;left:83px;font-family:Roboto;filter:blur(2px);font-weight:1000;font-size:18px">Totally Cool</h4>
-  <h4 style="position:relative;top:-205px;left:82px;font-family:Roboto;color:#fff;font-weight:1000;font-size:18px">Totally Cool</h4></div>
+  <h4 style="position:relative;top:-205px;left:82px;font-family:Roboto;color:#fff;font-weight:1000;font-size:18px">Totally Cool</h4>
+  </div><audio id="audio" controls loop style="opacity:0"><source src="http://66.90.93.122/ost/azure-striker-gunvolt/wddeovke/Phosphorescent%20Dance.mp3" type="audio/mp3"></audio><audio id="audio2" controls loop style="opacity:0"><source src="http://66.90.93.122/ost/azure-striker-gunvolt/sawguxrz/Beginning%20of%20a%20Long%20Night.mp3" type="audio/mp3"></audio>
   
     
 <script>
+function mt(){
+		if(document.getElementById("audio").style.opacity<0.3){document.getElementById("audio").style.opacity=1;
+			document.getElementById("audio2").style.opacity=1
+		}else
+		{document.getElementById("audio").style.opacity=0;
+			document.getElementById("audio2").style.opacity=0}
+};
 function clickerr(){
     document.getElementById("i1").style.opacity = 0;
     document.getElementById("i2").style.opacity = 0;
@@ -33,8 +43,6 @@ function clickerr(){
     document.getElementById("i2").style.opacity = 1;}else{
     document.getElementById("i3").style.opacity = 1;}
 } clickerr()
-    document.getElementById("tx").style.opacity = 1;
-    document.getElementById("tx2").style.opacity = 1;
   </script>
   </body>
   </html>
