--- a/fancyidle.html
+++ b/fancyidle.html
@@ -92,6 +92,8 @@ if (document.cookie =="blur=false;"){
       document.getElementById("i1").style.filter=null
       document.getElementById("i2").style.filter=null
       document.getElementById("i3").style.filter=null
+	document.getElementById("bBlur").checked = null
+	switchbut(1)
 }
 function switchbut(buttt){
   if (buttt==1){
