--- a/fancyidle.html
+++ b/fancyidle.html
@@ -98,12 +98,12 @@ if (document.cookie =="blur=false;"){
 function switchbut(buttt){
   if (buttt==1){
     if (!document.getElementById("bBlur").checked){
-	    document.cookie =="blur=false;"
+	    document.cookie ="blur=false;"
       document.getElementById("i1").style.filter=null
       document.getElementById("i2").style.filter=null
       document.getElementById("i3").style.filter=null
     } else{
-	    document.cookie =="blur=true;"
+	    document.cookie ="blur=true;"
       document.getElementById("i1").style.filter="blur(15px)"
       document.getElementById("i2").style.filter="blur(15px)"
       document.getElementById("i3").style.filter="blur(15px)"
