--- a/fancyidle.html
+++ b/fancyidle.html
@@ -45,7 +45,8 @@
   <span class="mdl-switch__label"></span>
 </label></span></span>
   </div>
-
+<div style="width:100px;height:40px;background-color:#aaa">
+<div style="width:100px;height:20px;background-color:#fff;draggable;position:absolute;top:0;left:0"></div></div>
 <script>
 wallpapers = ["http://gunvolt.com/en/GV1/images/GVohanami_16_9US.jpg","http://gunvolt.com/en/GV1/images/GVspring_16_9US.jpg","http://gunvolt.com/en/GV2/special/img/wall_hanami2017_16_9.jpg",
 "https://www.wallpaperup.com/uploads/wallpapers/2013/12/02/182291/76c5aef80966af99c675d0cfe5ffd13c-1000.jpg"];
