--- a/fancyidle.html
+++ b/fancyidle.html
@@ -22,7 +22,7 @@
   <h4 style="position:relative;top:-112px;left:80px;font-family:Roboto;color:#fff;font-weight:1000" id="toptitle">Tanner's False Wallpaper</h4>
   <h4 style="position:relative;top:-148px;left:83px;font-family:Roboto;filter:blur(2px);font-weight:1000;font-size:18px" id="subbg">Totally Cool</h4>
   <h4 style="position:relative;top:-205px;left:82px;font-family:Roboto;color:#fff;font-weight:1000;font-size:18px" id="subtitle">Totally Cool</h4>
-  </div><audio id="audio" controls loop style="opacity:0"><source src="http://66.90.93.122/ost/azure-striker-gunvolt/wddeovke/Phosphorescent%20Dance.mp3" type="audio/mp3"></audio><audio id="audio2" controls loop style="opacity:0"><source src="http://66.90.93.122/ost/azure-striker-gunvolt/sawguxrz/Beginning%20of%20a%20Long%20Night.mp3" type="audio/mp3"></audio>
+  </div>
   <div style="position:absolute !important;bottom:10px;left:10px;" id = "chips"><a href='#nt' target="_blank" style="padding-right:10px"><button class="mdl-chip mdl-chip--contact mdl-js-ripple-effect" >
     <span class="mdl-chip__contact mdl-color--teal mdl-color-text--white"><i class="material-icons" style="position:relative;left:-1px;top:4px">add_circle</i></span>
     <span class="mdl-chip__text">New Tab</span></button></a><a href='https://docs.google.com' target="_blank" style="padding-right:10px"><button class="mdl-chip mdl-chip--contact mdl-js-ripple-effect" >
